[metadata]
name = txt2png
version = 0.1.0
description = Stream stdin text into PNG frames served over HTTP
license = Apache-2.0
classifier =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
python_requires = >=3.10
py_modules = txt2png
